--- a/Wisej.WebAuthn.Article/Wisej.WebAuthn.Article.csproj
+++ b/Wisej.WebAuthn.Article/Wisej.WebAuthn.Article.csproj
@@ -26,7 +26,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Compile Remove="Startup.cs" />
-    <Content Include="Startup.cs"/>
+    <Content Include="Startup.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -58,7 +58,7 @@
 
   <ItemGroup>
     <PackageReference Include="Wisej-3" Version="3.1.*-*" />
-	<PackageReference Include="Wisej-3-WebAuthn" Version="3.1.*-*" />
+	<PackageReference Include="Wisej-3-WebAuthn" Version="3.1.1-beta.8" />
     <PackageReference Include="System.Data.SqlClient" Version="4.*" />
   </ItemGroup>
 
