--- a/Wisej.WebAuthn.Article/Wisej.WebAuthn.Article.csproj
+++ b/Wisej.WebAuthn.Article/Wisej.WebAuthn.Article.csproj
@@ -58,7 +58,7 @@
 
   <ItemGroup>
     <PackageReference Include="Wisej-3" Version="3.1.*-*" />
-	<PackageReference Include="Wisej-3-WebAuthn" Version="3.1.1-beta.8" />
+	<PackageReference Include="Wisej-3-WebAuthn" Version="3.1.*-*" />
     <PackageReference Include="System.Data.SqlClient" Version="4.*" />
   </ItemGroup>
 
